:lipstick: Publishing My Page

--- a/presentation/src/main/res/layout/fragment_liked.xml
+++ b/presentation/src/main/res/layout/fragment_liked.xml
@@ -9,5 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_liked"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
