--- a/presentation/src/main/res/layout/item_post.xml
+++ b/presentation/src/main/res/layout/item_post.xml
@@ -12,30 +12,63 @@
         android:layout_height="140dp"
         android:background="@drawable/bg_item_post">
 
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_v_heart_s"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8429" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_v_heart_e"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.8886" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_v_heart_t"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7714" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_v_heart_b"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8854" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_iv_profile_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1143" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_information_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1286" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_content_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2857" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_rv_category_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.7571" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_ibtn_comment_t"
             android:layout_width="match_parent"
@@ -49,24 +82,28 @@
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2286" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_information_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2143" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_content_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5571" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_rv_category_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.9" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_ibtn_comment_b"
             android:layout_width="match_parent"
@@ -81,18 +118,21 @@
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.0457" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_information_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1029" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_rv_category_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.0486" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_ibtn_comment_s"
             android:layout_width="match_parent"
@@ -105,13 +145,15 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.0914"/>
+            app:layout_constraintGuide_percent="0.0914" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_tv_content_e"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.9543" />
+
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_ibtn_comment_e"
             android:layout_width="match_parent"
@@ -125,54 +167,64 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@drawable/bg_default_profile"
-            app:layout_constraintTop_toTopOf="@id/g_iv_profile_t"
             app:layout_constraintBottom_toBottomOf="@id/g_iv_profile_b"
+            app:layout_constraintEnd_toEndOf="@id/g_iv_profile_e"
             app:layout_constraintStart_toStartOf="@id/g_iv_profile_s"
-            app:layout_constraintEnd_toEndOf="@id/g_iv_profile_e" />
+            app:layout_constraintTop_toTopOf="@id/g_iv_profile_t" />
 
         <TextView
             android:id="@+id/tv_information"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:textSize="10sp"
-            android:textColor="@color/input_information_gray"
             android:fontFamily="@font/pretendard_medium"
-            app:layout_constraintTop_toTopOf="@id/g_tv_information_t"
+            android:textColor="@color/input_information_gray"
+            android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_information_b"
-            app:layout_constraintStart_toStartOf="@id/g_tv_information_s" />
+            app:layout_constraintStart_toStartOf="@id/g_tv_information_s"
+            app:layout_constraintTop_toTopOf="@id/g_tv_information_t" />
+
         <TextView
             android:id="@+id/tv_content"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:textSize="14sp"
-            android:textColor="@color/black"
             android:fontFamily="@font/pretendard_medium"
-            app:layout_constraintTop_toTopOf="@id/g_tv_content_t"
+            android:textColor="@color/black"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_content_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_content_e"
             app:layout_constraintStart_toStartOf="@id/g_iv_profile_s"
-            app:layout_constraintEnd_toEndOf="@id/g_tv_content_e" />
+            app:layout_constraintTop_toTopOf="@id/g_tv_content_t" />
 
         <ImageButton
             android:id="@+id/ibtn_comment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:src="@drawable/ic_comment"
             android:background="@drawable/bg_bottom_nav"
-            app:layout_constraintTop_toTopOf="@id/g_ibtn_comment_t"
+            android:src="@drawable/ic_comment"
             app:layout_constraintBottom_toBottomOf="@id/g_ibtn_comment_b"
+            app:layout_constraintEnd_toEndOf="@id/g_ibtn_comment_e"
             app:layout_constraintStart_toStartOf="@id/g_ibtn_comment_s"
-            app:layout_constraintEnd_toEndOf="@id/g_ibtn_comment_e" />
+            app:layout_constraintTop_toTopOf="@id/g_ibtn_comment_t" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_category"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            tools:listitem="@layout/item_category"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toTopOf="@id/g_rv_category_t"
             app:layout_constraintBottom_toBottomOf="@id/g_rv_category_b"
-            app:layout_constraintStart_toStartOf="@id/g_rv_category_s" />
+            app:layout_constraintStart_toStartOf="@id/g_rv_category_s"
+            app:layout_constraintTop_toTopOf="@id/g_rv_category_t"
+            tools:listitem="@layout/item_category" />
 
+        <View
+            android:id="@+id/v_heart"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/ic_empty_heart"
+            app:layout_constraintBottom_toBottomOf="@id/g_v_heart_b"
+            app:layout_constraintEnd_toEndOf="@+id/g_v_heart_e"
+            app:layout_constraintStart_toStartOf="@id/g_v_heart_s"
+            app:layout_constraintTop_toTopOf="@+id/g_v_heart_t" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
