--- a/presentation/src/main/res/layout/fragment_my.xml
+++ b/presentation/src/main/res/layout/fragment_my.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -7,12 +8,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/my_page_background">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_my_post"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_post"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
