gray 부분 color 네이밍 수정

--- a/presentation/src/main/res/layout/actiivty_find_password_page.xml
+++ b/presentation/src/main/res/layout/actiivty_find_password_page.xml
@@ -133,7 +133,7 @@
         android:fontFamily="@font/pretendard_regular"
         android:paddingStart="12dp"
         android:text="@string/typing_email"
-        android:textColor="@color/input_information_gray"
+        android:textColor="@color/gray"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_email_e"
