--- a/presentation/src/main/res/layout/activity_login_page.xml
+++ b/presentation/src/main/res/layout/activity_login_page.xml
@@ -266,7 +266,7 @@
             android:hint="@string/typing_email"
             android:paddingStart="16dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/input_information_gray"
+            android:textColorHint="@color/gray"
             android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
             app:layout_constraintEnd_toEndOf="@+id/g_input_information_e"
@@ -282,7 +282,7 @@
             android:hint="@string/typing_password"
             android:paddingStart="16dp"
             android:textColor="@color/black"
-            android:textColorHint="@color/input_information_gray"
+            android:textColorHint="@color/gray"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/g_input_password_b"
             app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
@@ -311,7 +311,7 @@
             android:layout_height="0dp"
             android:fontFamily="@font/pretendard_regular"
             android:text="@string/find_password"
-            android:textColor="@color/input_information_gray"
+            android:textColor="@color/gray"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@id/g_find_password_b"
             app:layout_constraintEnd_toEndOf="@id/g_find_password_e"
@@ -357,7 +357,7 @@
             android:layout_height="0dp"
             android:fontFamily="@font/pretendard_regular"
             android:text="@string/sign_up"
-            android:textColor="@color/input_information_gray"
+            android:textColor="@color/gray"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/g_sign_up_b"
             app:layout_constraintEnd_toEndOf="@id/g_sign_up_e"
