--- a/presentation/src/main/res/layout/activity_sign_up_page.xml
+++ b/presentation/src/main/res/layout/activity_sign_up_page.xml
@@ -194,7 +194,7 @@
         android:hint="@string/input_name"
         android:paddingStart="16dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_name_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
@@ -210,7 +210,7 @@
         android:hint="@string/typing_email"
         android:paddingStart="16dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_email_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
@@ -226,7 +226,7 @@
         android:hint="@string/typing_password"
         android:paddingStart="16dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
         app:layout_constraintStart_toStartOf="@id/g_input_information_s"
@@ -243,7 +243,7 @@
         android:hint="@string/input_password_again"
         android:paddingStart="16dp"
         android:textColor="@color/black"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_input_password_again_b"
         app:layout_constraintEnd_toEndOf="@id/g_input_information_e"
