--- a/presentation/src/main/res/layout/activity_new_password_input_page.xml
+++ b/presentation/src/main/res/layout/activity_new_password_input_page.xml
@@ -151,7 +151,7 @@
         android:layout_height="0dp"
         android:fontFamily="@font/pretendard_regular"
         android:text="@string/password_rule"
-        android:textColor="@color/input_information_gray"
+        android:textColor="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_tv_password_rule_b"
         app:layout_constraintEnd_toEndOf="@id/g_tv_password_rule_e"
@@ -166,7 +166,7 @@
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/hint_input_new_password"
         android:paddingStart="12dp"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_et_input_new_password_b"
         app:layout_constraintEnd_toEndOf="@id/g_et_input_new_password_e"
@@ -181,7 +181,7 @@
         android:fontFamily="@font/pretendard_regular"
         android:hint="@string/input_again"
         android:paddingStart="12dp"
-        android:textColorHint="@color/input_information_gray"
+        android:textColorHint="@color/gray"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/g_et_input_new_password_again_b"
         app:layout_constraintEnd_toEndOf="@id/g_et_input_new_password_e"
