--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -47,8 +47,8 @@
 
     <TextView
         android:id="@+id/tv_idea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="61dp"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/pretendard_bold"
@@ -56,7 +56,8 @@
         android:textColor="@color/gray"
         android:textSize="19sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/g_btn_tab_bar_t"
+        app:layout_constraintBottom_toBottomOf="@id/g_btn_tab_bar_b"/>
 
     <TextView
         android:id="@+id/tv_feedback"
