--- a/presentation/src/main/res/layout/activity_main_page.xml
+++ b/presentation/src/main/res/layout/activity_main_page.xml
@@ -11,6 +11,62 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_job_opening_post_s"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4949" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_job_opening_post_e"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5795" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_feedback_post_s"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3462" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_feedback_post_e"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.4744" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/tv_idea_post_s"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1564" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/tv_idea_post_e"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3256" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_entire_post_s"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.0513" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/g_tv_entire_post_e"
+            android:layout_width="wrap_content"
+            android:layout_height="0.5dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1359" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/g_btn_search_s"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -25,14 +81,14 @@
             app:layout_constraintGuide_percent="0.8256" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_btn_tab_bar_t"
+            android:id="@+id/g_tab_bar_t"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.0521" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/g_btn_tab_bar_b"
+            android:id="@+id/g_tab_bar_b"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="horizontal"
@@ -40,67 +96,65 @@
 
         <TextView
             android:id="@+id/tv_entire_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="44dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:fontFamily="@font/pretendard_bold"
             android:text="@string/entire"
             android:textColor="@color/gray"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_entire_post_e"
+            app:layout_constraintStart_toStartOf="@id/g_tv_entire_post_s"
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
         <TextView
             android:id="@+id/tv_idea"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginLeft="61dp"
-            android:layout_marginTop="44dp"
             android:fontFamily="@font/pretendard_bold"
             android:text="@string/idea"
             android:textColor="@color/gray"
-            android:textSize="19sp"
-            app:layout_constraintBottom_toBottomOf="@id/g_btn_tab_bar_b"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/g_btn_tab_bar_t" />
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
+            app:layout_constraintEnd_toEndOf="@id/tv_idea_post_e"
+            app:layout_constraintStart_toStartOf="@id/tv_idea_post_s"
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
         <TextView
             android:id="@+id/tv_feedback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="135dp"
-            android:layout_marginTop="44dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:fontFamily="@font/pretendard_bold"
             android:text="@string/feedback"
             android:textColor="@color/gray"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_feedback_post_e"
+            app:layout_constraintStart_toStartOf="@id/g_tv_feedback_post_s"
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
         <TextView
             android:id="@+id/tv_job_opening"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="193dp"
-            android:layout_marginTop="44dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:fontFamily="@font/pretendard_bold"
             android:text="@string/job_opening"
             android:textColor="@color/gray"
-            android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
+            app:layout_constraintEnd_toEndOf="@id/g_tv_job_opening_post_e"
+            app:layout_constraintStart_toStartOf="@id/g_tv_job_opening_post_s"
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
         <Button
             android:id="@+id/btn_search_button"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/ic_search_button"
-            app:layout_constraintBottom_toBottomOf="@id/g_btn_tab_bar_b"
+            app:layout_constraintBottom_toBottomOf="@id/g_tab_bar_b"
             app:layout_constraintEnd_toEndOf="@id/g_btn_search_e"
             app:layout_constraintStart_toStartOf="@id/g_btn_search_s"
-            app:layout_constraintTop_toTopOf="@id/g_btn_tab_bar_t" />
+            app:layout_constraintTop_toTopOf="@id/g_tab_bar_t" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
