--- a/presentation/src/main/res/drawable/bg_category_view.xml
+++ b/presentation/src/main/res/drawable/bg_category_view.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="#00000000" />
     <corners android:radius="12dp" />
-    <stroke android:color="@color/input_information_gray"
+    <stroke android:color="@color/gray"
         android:width="1dp" />
 </shape>
