--- a/presentation/src/main/res/drawable/selector_nav_color_text.xml
+++ b/presentation/src/main/res/drawable/selector_nav_color_text.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:color="@color/primary"/>
-    <item android:color="@color/input_information_gray"/>
+    <item android:color="@color/gray"/>
 </selector>
