--- a/presentation/src/main/res/drawable/v_vertical_line.xml
+++ b/presentation/src/main/res/drawable/v_vertical_line.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/input_information_gray"/>
+            <solid android:color="@color/gray"/>
             <size android:width="1dp" />
             <size android:height="13dp"/>
         </shape>
