--- a/presentation/src/main/res/layout/item_post.xml
+++ b/presentation/src/main/res/layout/item_post.xml
@@ -235,7 +235,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:fontFamily="@font/pretendard_medium"
-            android:textColor="@color/input_information_gray"
+            android:textColor="@color/gray"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_information_b"
             app:layout_constraintStart_toStartOf="@id/g_tv_information_s"
@@ -290,7 +290,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pretendard_regular"
-            android:textColor="@color/input_information_gray"
+            android:textColor="@color/gray"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@id/g_tv_comment_b"
             app:layout_constraintEnd_toEndOf="@id/g_tv_comment_e"
@@ -302,7 +302,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/pretendard_regular"
-            android:textColor="@color/input_information_gray"
+            android:textColor="@color/gray"
             android:textSize="10sp"
             app:layout_constraintStart_toStartOf="@id/g_tv_heart_count_s"
             app:layout_constraintTop_toTopOf="@id/g_tv_heart_count_t"
